# opendataCampus-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  compliance.md  headless.md  setup.md  sources.md  tools.md
scripts/: integration_e2e.py  smoke_sources.py
spec/: erm.dbml
spec/features/: browse-source.feature  browser-policy.feature  discover-sources.feature  read-resource.feature  source-routing.feature
src/opendata_campus_mcp/: __init__.py  contracts.py
src/opendata_campus_mcp/adapters/: headless.py  twcampus.py  web_search.py
src/opendata_campus_mcp/domain/: browser_policy.py  source_router.py
src/opendata_campus_mcp/mcp_server/: __main__.py  server.py  service.py
src/opendata_campus_mcp/repository/: source_cache.py
tests/: test_browser_policy.py  test_service.py  test_source_router.py
