[project]
name = "opendata-campus-mcp"
version = "0.1.0"
description = "教育資源導航 MCP — 以 TWCampus 作為目錄入口，路由至台灣官方教育平台"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{ name = "warden" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # 台灣政府教育平台憑證部分缺 Subject Key Identifier，改用 OS 系統信任庫驗證
    "truststore>=0.9",
]

[project.optional-dependencies]
headless = ["playwright>=1.44"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
opendata-campus-mcp = "opendata_campus_mcp.mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendata_campus_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
